@@ -1,3 +1,10 @@
+2002-03-20  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03135] commit of [w3m-dev 03006] is incomplete.
+	* file.c (HTMLlineproc2body): check form_int fid attr
+			update forms[]
+			fix buf->formlist
+
 2002-03-16  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* part of [w3m-dev-en 00713] contrib: unofficial "current page info" patch, updated for w3m-0.3
@@ -3235,4 +3242,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.355 2002/03/15 18:48:55 ukai Exp $
+$Id: ChangeLog,v 1.356 2002/03/19 15:54:47 ukai Exp $
